--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.3.1"
+		"@rollup/plugin-json": "^6.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"svelte-i18n": "^3.7.4"
 	}
 }
