--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"dependencies": {
 		"@rollup/plugin-json": "^6.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
+		"firebase": "^10.4.0",
 		"svelte-i18n": "^3.7.4"
 	}
 }
