--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@rollup/plugin-json": "^6.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"firebase": "^10.4.0",
