--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"postcss": "^8.4.30",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.69.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
@@ -42,6 +43,9 @@
 		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@rollup/plugin-json": "^6.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
+		"@tiptap/core": "^2.1.11",
+		"@tiptap/pm": "^2.1.11",
+		"@tiptap/starter-kit": "^2.1.11",
 		"firebase": "^10.4.0",
 		"svelte-i18n": "^3.7.4"
 	}
