--- a/package.json
+++ b/package.json
@@ -43,12 +43,19 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@rollup/plugin-json": "^6.0.0",
+		"@svelte-plugins/tooltips": "^0.1.8",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@tiptap/core": "^2.1.11",
+		"@tiptap/extension-image": "^2.1.12",
+		"@tiptap/extension-link": "^2.1.12",
+		"@tiptap/extension-text-align": "^2.1.12",
+		"@tiptap/extension-youtube": "^2.1.12",
 		"@tiptap/pm": "^2.1.11",
 		"@tiptap/starter-kit": "^2.1.11",
 		"firebase": "^10.4.0",
+		"svelte-collapsible": "^0.2.2",
 		"svelte-i18n": "^3.7.4",
-		"svelte-multiselect": "^10.2.0"
+		"svelte-multiselect": "^10.2.0",
+		"svelte-simple-modal": "^1.6.1"
 	}
 }
