--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -29,6 +30,7 @@
 		"postcss": "^8.4.30",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.69.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
@@ -41,8 +43,20 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@rollup/plugin-json": "^6.0.0",
+		"@svelte-plugins/tooltips": "^0.1.8",
 		"@sveltejs/adapter-node": "^1.3.1",
+		"@tiptap/core": "^2.1.11",
+		"@tiptap/extension-image": "^2.1.12",
+		"@tiptap/extension-link": "^2.1.12",
+		"@tiptap/extension-text-align": "^2.1.12",
+		"@tiptap/extension-youtube": "^2.1.12",
+		"@tiptap/pm": "^2.1.11",
+		"@tiptap/starter-kit": "^2.1.11",
 		"firebase": "^10.4.0",
-		"svelte-i18n": "^3.7.4"
+		"intl-messageformat": "^10.5.4",
+		"svelte-collapsible": "^0.2.2",
+		"svelte-i18n": "^3.7.4",
+		"svelte-multiselect": "^10.2.0",
+		"svelte-simple-modal": "^1.6.1"
 	}
 }
