--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"svelte-collapsible": "^0.2.2",
 		"svelte-i18n": "^3.7.4",
 		"svelte-multiselect": "^10.2.0",
+		"svelte-select": "^5.7.0",
 		"svelte-simple-modal": "^1.6.1"
 	}
 }
