--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"codegen": "graphql-codegen"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
+		"@graphql-codegen/cli": "^5.0.0",
+		"@graphql-codegen/client-preset": "^4.1.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -22,11 +25,13 @@
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"@urql/svelte": "^4.0.4",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"graphql": "^16.8.1",
 		"postcss": "^8.4.30",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -35,7 +40,7 @@
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.2.2",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
@@ -54,9 +59,9 @@
 		"@tiptap/starter-kit": "^2.1.11",
 		"firebase": "^10.4.0",
 		"intl-messageformat": "^10.5.4",
+		"jwt-decode": "^4.0.0",
 		"svelte-collapsible": "^0.2.2",
 		"svelte-i18n": "^3.7.4",
-		"svelte-multiselect": "^10.2.0",
 		"svelte-select": "^5.7.0",
 		"svelte-simple-modal": "^1.6.1"
 	}
