--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -53,7 +53,7 @@ jobs:
   deploy:
     environment: development
     needs: [build]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
         - name: executing remote ssh commands using password
