[WTE-009] Menu bar

--- a/docker/Dockerfile.develop
+++ b/docker/Dockerfile.develop
@@ -17,6 +17,8 @@ ARG PUBLIC_ENDPOINT
 ENV PUBLIC_ENDPOINT ${PUBLIC_ENDPOINT}
 ARG PUBLIC_COOKIES_SECURE
 ENV PUBLIC_COOKIES_SECURE ${PUBLIC_COOKIES_SECURE}
+ARG PUBLIC_PAGE_ENDPOINT
+ENV PUBLIC_PAGE_ENDPOINT ${PUBLIC_PAGE_ENDPOINT}
     
 # build SvelteKit app
 RUN npm run build
