--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@graphql-codegen/cli": "^5.0.0",
 		"@graphql-codegen/client-preset": "^4.1.0",
+		"@melt-ui/pp": "^0.3.0",
+		"@melt-ui/svelte": "^0.71.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -41,15 +44,16 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.2",
-		"vitest": "^0.32.2"
+		"vite": "^5.0.0",
+		"vitest": "^1.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@rollup/plugin-json": "^6.0.0",
 		"@svelte-plugins/tooltips": "^2.0.1",
-		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@tailwindcss/typography": "^0.5.10",
 		"@tiptap/core": "^2.1.11",
 		"@tiptap/extension-image": "^2.1.12",
 		"@tiptap/extension-link": "^2.1.12",
@@ -58,11 +62,16 @@
 		"@tiptap/pm": "^2.1.11",
 		"@tiptap/starter-kit": "^2.1.11",
 		"firebase": "^10.4.0",
-		"intl-messageformat": "^10.5.4",
+		"intl-messageformat": "^10.5.11",
 		"jwt-decode": "^4.0.0",
-		"svelte-collapsible": "^0.2.2",
-		"svelte-i18n": "^3.7.4",
+		"svelte-collapsible": "^0.3.0",
+		"svelte-i18n": "^4.0.0",
 		"svelte-select": "^5.7.0",
 		"svelte-simple-modal": "^1.6.1"
+	},
+	"exports": {
+		".": {
+			"svelte": "./dist/index.js"
+		}
 	}
 }
